# ShipSegmentation

./: .gitignore  LICENSE  pyproject.toml
src/scripts/: create_masks.py
src/shipseg/data/preprocess/: annotation_to_mask.py
src/shipseg/utils/: annotation.py  config.py
